Bugfix nav buttons too small

--- a/assets/css/App/Workspace/File Explorer.css
+++ b/assets/css/App/Workspace/File Explorer.css
@@ -5,7 +5,7 @@
   padding-top: 14px;
 }
 
-.nav-action-button {
+.nav-buttons-container .nav-action-button {
   background-color: var(--interactive-normal);
   border: 1px solid transparent;
   padding: 7px 20px 0px 20px;
@@ -20,7 +20,7 @@
   transition: all 200ms ease-in;
 }
 
-.nav-action-button.is-active {
+.nav-buttons-container .nav-action-button.is-active {
   background-color: var(--interactive-hover);
   transition: all 200ms ease-in;
 }
